# ai_slop_discord_voice_bot

./: .env.example  .gitignore  Modelfile  main.py  pyproject.toml  run.bat
docs/: setup.md
src/: config.py
src/llm/: __init__.py  base.py  conversation.py  deepseek.py  ollama.py  responder.py  system_prompt.txt
src/stt/: transcriber.py
src/tts/: __init__.py  base.py  edge.py  omnivoice.py  silero.py  synthesizer.py
src/voice/: player.py  recorder.py
