[project]
name = "discorder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "discord.py[voice] @ git+https://github.com/Rapptz/discord.py.git@master",
    "discord-ext-voice-recv @ git+https://github.com/rdphillips7/discord-ext-voice-recv.git@main",
    "davey>=0.1.0",
    "faster-whisper>=1.0.0",
    "edge-tts>=6.0.0",
    "ollama>=0.4.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "omnivoice",
    "soundfile",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'win32'" }]
torchaudio = [{ index = "pytorch-cu124", marker = "sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
